# nurch

./: README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 352c6a079e27_initial_schema.py  a3ad812036b4_add_grid_fields_to_zones_and_plants.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/evals/: __init__.py  diagnosis_eval.py  recommendation_eval.py  safety_eval.py
backend/app/models/: __init__.py  agent.py  ai_failure.py  alert.py  diagnosis.py  eval_result.py  fcm_token.py  garden.py  knowledge_source.py  photo.py  plant.py  prompt_version.py  species.py  user.py  zone.py
backend/app/prompts/: __init__.py  agent.py  diagnosis.py  registry.py
backend/app/routers/: agent.py  auth.py  dashboard.py  diagnoses.py  evals.py  gardens.py  location.py  notifications.py  photos.py  plants.py  species.py
backend/app/schemas/: diagnosis.py  garden.py  photo.py  plant.py  species.py  user.py
backend/app/seed/: knowledge_sources.json  load_species.py
backend/app/seed/species/: aloe_vera.json  basil.json  cilantro.json  cucumber.json  fiddle_leaf_fig.json  lavender.json  lettuce.json  marigold.json  mint.json  monstera.json  pepper.json  pothos.json  rose.json  rosemary.json  snake_plant.json  thyme.json  (+4 more)
backend/app/services/: agent_graph.py  agent_state.py  agent_tools.py  ai_diagnostic.py  ai_provider.py  auth.py  guardrails.py  location_intelligence.py  notification_service.py  photo_service.py
backend/app/tasks/: __init__.py  photo_reminders.py  weather_refresh.py  weekly_summary.py
(+69 files in other folders)
